enum BookingStatus {
    PENDING
    CONFIRMED
    CANCELLED
    COMPLETED
}

model Booking {
    id  String  @id @default(uuid())
    checkInDate DateTime
    checkOutDate DateTime
    totalPrice Decimal  @db.Decimal(10, 2)
    status  BookingStatus   @default(PENDING)
    createdAt DateTime  @default(now())
    updatedAt DateTime @updatedAt

    // User booking
    userId String
    user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

    roomId  String
    room    Room    @relation(fields: [roomId], references: [id], onDelete: Cascade)

    payments Payment[]

    review  Review?
}
