model ReviewImage {
    id  String  @id @default(uuid())

    imageUrl   String
    publicId   String   @unique()

    createdAt  DateTime    @default(now())
    updatedAt  DateTime    @updatedAt

    // Relation
    reviewId    String
    review      Review  @relation(fields: [reviewId], references: [id], onDelete: Cascade)
}
